--- a/_site.yml
+++ b/_site.yml
@@ -1,13 +1,34 @@
 name: "Datamotto"
 title: "Data Motto"
-description: "Data Motto"
+description: |
+  A web platform to create high quality summary of
+  experiencing with Data!
 output_dir: "_site"
-base_url: "https://www.datamotto.com"
+base_url: https://www.datamotto.com
 creative_commons: CC BY-NC
+collections:
+  posts:
+    categories: true
+    categories_metadata: true
+    authors_metadata: true
+    feed_items_max: 20
+    citations: false
+    share: [twitter, linkedin, facebook]
+    subscribe: _subscribe.html
+    # disqus:
+    #   shortname: reproducible-finance-with-r
+    #   hidden: false
+rss:
+  full_content: true
+    # categories:   # to create dedicated feeds that map to particular categories
+    # - portfolios
+    # - forecasting
 navbar:
   logo:
     image: logo.gif
     href: https://www.datamotto.com
+  search: false
+  source_url: https://github.com/ardeeshany/DataMotto
   right:
     - text: "All"
       href: index.html
@@ -17,7 +38,11 @@ navbar:
       href: Python.html
     - text: "About"
       href: about.html
+    - icon: fa fa-rss
+      href: index.xml
 output:
   distill::distill_article:
     toc: true
+    toc_depth: 2
+    toc_float: false
     css: mystyle.css
